기본동작에 대한 mybatis 도입 완료
기본동작이란 운송데이터를 입력하고(C), 읽고(R), 수정하고(U), 삭제하고(D)를 뜻합니다.